# Projektarbeit_Ihler_Schulz

./: .clang-format  .gitignore  CMakeLists.txt  runcmake.sh
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c  main.c
